tests/invalid/multi_output_missing_outputs.esm
{
  "esm": "0.2.0",
  "metadata": {
    "name": "MultiOutputMissingOutputs",
    "description": "Invalid: multi_output_stencil missing required 'outputs' field. Schema must reject (required: [applies_to, outputs, stencil])."
  },
  "models": {
    "Empty": {
      "variables": { "q": { "type": "state", "units": "1", "default": 0.0 } },
      "equations": [{ "lhs": { "op": "D", "args": ["q"], "wrt": "t" }, "rhs": 0.0 }]
    }
  },
  "discretizations": {
    "bad_scheme": {
      "kind": "multi_output_stencil",
      "applies_to": { "op": "reconstruct", "args": ["$q"], "dim": "$x" },
      "stencil": {
        "q_left_edge":  [{ "selector": { "kind": "cartesian", "axis": "$x", "offset": 0 }, "coeff": 1.0 }],
        "q_right_edge": [{ "selector": { "kind": "cartesian", "axis": "$x", "offset": 1 }, "coeff": 1.0 }]
      }
    }
  }
}
